--- a/03_setup_k8s_platform/tasks/context_management-stack/install_quantumleap.yml
+++ b/03_setup_k8s_platform/tasks/context_management-stack/install_quantumleap.yml
@@ -27,7 +27,7 @@
     msg: "Internal endpoint {{ timescale_endpoint }} does not exist!"
   when: timescale_endpoint_exists['resources'][0] is undefined
 
-- name: Check if Quantumleap credentials exists in the cluster
+- name: Check if QuantumLeap credentials exists in the cluster
   community.kubernetes.k8s_info:
     kubeconfig: "{{ k8s_config }}"
     context: "{{ k8s_context }}"
@@ -37,12 +37,12 @@
   register: quantumleap_credentials_exists
   no_log: true
 
-- name: Check state of Quantumleap credentials
+- name: Check state of QuantumLeap credentials
   fail:
     msg: "Credentials {{ quantumleap_credentials_exists }} do not exist! Please, deploy TimescaleDB with user quantumleap."
   when: quantumleap_credentials_exists['resources'][0] is undefined
 
-- name: Set Quantumleap credentials to access TimescaleDB
+- name: Set QuantumLeap credentials to access TimescaleDB
   ansible.builtin.set_fact:
     quantumleap_credentials_username: "{{ quantumleap_credentials_exists['resources'][0]['data']['username'] | b64decode }}"
     quantumleap_credentials_password: "{{ quantumleap_credentials_exists['resources'][0]['data']['password'] | b64decode }}"
@@ -71,7 +71,7 @@
   when: postgres_credentials_exists['resources'][0] is defined
   no_log: true
 
-- name: Deploy Quantumleap
+- name: Deploy QuantumLeap
   k8s:
     kubeconfig: "{{ k8s_config }}"
     context: "{{ k8s_context }}"
@@ -80,3 +80,15 @@
     state: present
   loop:
     - "{{ lookup('template', 'templates/context_management-stack/quantumleap.yml') | from_yaml_all | list }}"
+
+- name: Wait till deployment of QuantumLeap is completed
+  community.kubernetes.k8s_info:
+    kubeconfig: "{{ k8s_config }}"
+    context: "{{ k8s_context }}"
+    namespace: "{{ k8s_namespace }}"
+    kind: Pod
+    label_selectors:
+      - app=quantumleap
+    wait: yes
+    wait_sleep: 10
+    wait_timeout: 360
