--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,9 +79,9 @@ deploy_ansible_staging:
     - cat /etc/ansible/hosts
     - *ssh_config_staging
     - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u acn -vvv 02_setup_k8s/setup_k8s_playbook_01.yml
-    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u acn --private-key ~/.ssh/id_rsa_sc_admin 02_setup_k8s/setup_k8s_playbook_02.yml
-    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u acn --private-key ~/.ssh/id_rsa_sc_admin 02_setup_k8s/setup_k8s_playbook_03.yml
-    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u acn --private-key ~/.ssh/id_rsa_sc_admin 03_setup_k8s_platform/full_install.yml
+    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u acn -vvv 02_setup_k8s/setup_k8s_playbook_02.yml
+    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u acn -vvv 02_setup_k8s/setup_k8s_playbook_03.yml
+    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u acn -vvv 03_setup_k8s_platform/full_install.yml
   when: manual
   stage: staging
   environment:
