--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,6 +73,7 @@ variables: &global-variables
 deploy_ansible_staging:
   script:
     - apt-get update -y && apt install openssh-client curl vim git less iputils-ping sshpass libpq-dev gcc python3-dev musl-dev -y
+    - python -m pip install 'openshift==0.11.2' jmespath docker psycopg2-binary
     - mv "$STAGING_INVENTORY_FULL" inventory
     - *ssh_config_staging
     - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u root -vvv 02_setup_k8s/setup_k8s_playbook_01.yml
