--- a/02_setup_k8s/tasks/05_cert_manager.yml
+++ b/02_setup_k8s/tasks/05_cert_manager.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Configure ingress load balancer
-  k8s:
+  community.kubernetes.k8s:
     state: present
     namespace: "ingress"
     definition:
@@ -33,19 +33,19 @@
 
 # From repository
 - name: Add Jetstack Repo
-  helm_repository:
+  community.kubernetes.helm_repository:
     repo_name: jetstack
     repo_url: "https://charts.jetstack.io"
 
 - name: Create a k8s namespace
-  k8s:
+  community.kubernetes.k8s:
     name: "{{ cert_manager_namespace }}"
     api_version: v1
     kind: Namespace
     state: present
 
 - name: Deploy stable version of cert-manager chart
-  helm:
+  community.kubernetes.helm:
     name: cert-manager
     chart_ref: jetstack/cert-manager
     release_namespace: "{{ cert_manager_namespace }}"
@@ -53,7 +53,7 @@
     values: "{{ lookup('template', 'cert-manager_values.yaml.j2') | from_yaml }}"
 
 - name: Create LE Issuer Prod
-  k8s:
+  community.kubernetes.k8s:
     state: present
     namespace: "{{ cert_manager_namespace }}"
     definition:
