--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,7 @@ variables: &global-variables
 deploy_ansible_staging:
   script:
     # Add Helm repo
-    - apt-get update -y apt-get install curl apt-transport-https --y
+    - apt-get update -y apt-get install curl apt-transport-https -y
     - curl https://baltocdn.com/helm/signing.asc | apt-key add -
     - echo "deb https://baltocdn.com/helm/stable/debian/ all main" | tee /etc/apt/sources.list.d/helm-stable-debian.list
     # Install required system packages
