--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,9 +87,9 @@ deploy_ansible_staging:
     # Start installing platform
     - mv "$STAGING_INVENTORY_FULL" inventory
     - *ssh_config_staging
-    #- ansible-playbook -i inventory -l $TARGET_HOSTNAME -u root 02_setup_k8s/setup_k8s_playbook_01.yml
-    #- ansible-playbook -i inventory -l $TARGET_HOSTNAME -u acn 02_setup_k8s/setup_k8s_playbook_02.yml
-    #- ansible-playbook -i inventory -l localhost -u acn 02_setup_k8s/setup_k8s_playbook_03.yml
+    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u root 02_setup_k8s/setup_k8s_playbook_01.yml
+    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u acn 02_setup_k8s/setup_k8s_playbook_02.yml
+    - ansible-playbook -i inventory -l localhost -u acn 02_setup_k8s/setup_k8s_playbook_03.yml
     - ansible-playbook -i inventory -l localhost 03_setup_k8s_platform/full_install.yml
   when: manual
   stage: staging
