--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,7 +70,7 @@ variables: &global-variables
     - chmod 600 /root/.ssh/config
 
 # deploy for staging
-deploy_ansible_staging:
+deploy_ansible_staging_full:
   script:
     - apt-get update -y && apt-get install curl apt-transport-https -y
     # Add Helm package repo
@@ -94,7 +94,38 @@ deploy_ansible_staging:
   when: manual
   stage: staging
   environment:
-    name: "Deploy Staging Env"
+    name: "Deploy Staging Full"
+  artifacts:
+    paths:
+      - .facts/
+    expire_in: never
+    when: on_success
+
+deploy_ansible_staging_platform:
+  script:
+    - apt-get update -y && apt-get install curl apt-transport-https -y
+    # Add Helm package repo
+    - curl https://baltocdn.com/helm/signing.asc | apt-key add -
+    - echo "deb https://baltocdn.com/helm/stable/debian/ all main" | tee /etc/apt/sources.list.d/helm-stable-debian.list
+    # Add kubectl package repo
+    - curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
+    - echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | tee /etc/apt/sources.list.d/kubernetes.list
+    # Install required system packages
+    - apt-get update -y && apt install openssh-client curl vim git less iputils-ping sshpass libpq-dev gcc python3-dev musl-dev helm kubectl -y
+    # Install required python packages
+    - python3 -m pip install 'openshift==0.11.2' jmespath docker psycopg2-binary pymongo
+
+    # Start installing platform
+    - mv "$STAGING_INVENTORY_FULL" inventory
+    - *ssh_config_staging
+    - mkdir -p /root/.kube
+    - scp acn@$STAGING_TARGET_HOST:/home/acn/.kube/kubeconfig_txl_staging /root/.kube/kubeconfig_txl_staging
+    - head 1 /root/.kube/kubeconfig_txl_staging
+    #- ansible-playbook -i inventory -l localhost 03_setup_k8s_platform/full_install.yml
+  when: manual
+  stage: staging
+  environment:
+    name: "Deploy Staging Platform"
   artifacts:
     paths:
       - .facts/
